--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Listify App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <section id="app"></section>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
